# NKTDC_mini

./: CMakeLists.txt  Makefile  README.md  calib_TDC4CH.c  tdc_settings.cfg
app/: CMakeLists.txt  frontend_tdc_mini.cpp  measure_lifetime.cpp  tdc_calibrator.cpp  tdc_viewer.cpp
config/: setup.txt
lib/: CMakeLists.txt  TdcController.cpp  TdcController.h
src/: TdcSystem.cpp  TdcSystem.h  frontend_tdc_main.cpp
